refactor: finalize calculator architecture and repository cleanup